// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoXzr hMJREY"
>
  <li
    className="sc-fzpjYC kEikZg"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKxP jgIIFa"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzpjYC kEikZg"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKxP jgIIFa"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzpjYC kEikZg"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKxP jgIIFa"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoXzr hMJREY"
>
  <li
    className="sc-fzpjYC fBTXqw"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKxP jgIIFa"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzpjYC fBTXqw"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKxP jgIIFa"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzpjYC fBTXqw"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKxP jgIIFa"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
